# Xor-Shift

./: CMakeLists.txt  README.md  const.h  main.c  wiki.c  wiki.h  xor.h
